--- a/nest-backend/package.json
+++ b/nest-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^8.0.1",
     "bcrypt": "^5.0.1",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.2.5",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
