--- a/nest-backend/package.json
+++ b/nest-backend/package.json
@@ -26,14 +26,17 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.0.9",
     "@nestjs/typeorm": "^8.0.1",
     "bcrypt": "^5.0.1",
+    "fastify-swagger": "^4.8.4",
     "jwt-decode": "^3.1.2",
     "mysql2": "^2.2.5",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
